@@ -1,5 +1,5 @@
 #ifndef lint
-static const char RCSid[] = "$Id: source.c,v 2.51 2005/05/26 06:55:22 greg Exp $";
+static const char RCSid[] = "$Id: source.c,v 2.52 2005/05/31 18:01:09 greg Exp $";
 #endif
 /*
  *  source.c - routines dealing with illumination sources.
@@ -437,7 +437,8 @@ direct(					/* add direct component */
 			break;
 		scp = srccnt + cntord[sn].sndx;
 						/* test for hit */
-		rayorigin(&sr, SHADOW, r, scp->coef);
+		rayorigin(&sr, SHADOW, r, NULL);
+		copycolor(sr.rcoef, scp->coef);
 		VCOPY(sr.rdir, scp->dir);
 		sr.rsrc = scp->sno;
 						/* keep statistics */
